# ComfyUI-Tabularize

./: .gitignore  CHANGELOG.md  README.md  __init__.py  api.py  pyproject.toml  tabularize.py  utils.py
.github/: FUNDING.yml
web/: tabularize.js  utils.js
