[project]
name            = "ComfyUI-Tabularize"
version         = "0.3.0"
description     = "Organize ComfyUI workflow nodes into columns with automatic link routing"
readme          = "README.md"
license         = { text = "MPL-2.0" }
requires-python = ">=3.10"

authors = [
    { name = "Kevin Mackey" }
]

[project.urls]
repository = "https://github.com/Malkalypse/ComfyUI-Tabularize"
